--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html>
 
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
     <title></title>
 </head>
+
+<style type="text/css">
+  h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 14em;
+  }
+</style>
 
 <body>
     <h1>testing is a good day to cry testing</h1>
