--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="height=device-height">
     <title></title>
 </head>
 
