--- a/index.html
+++ b/index.html
@@ -2,38 +2,58 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <meta name="viewport" content="height=device-height">
-    <title></title>
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" type="text/css">
+  <meta name="viewport" content="height=device-height">
+  <meta charset="UTF-8">
+  <title></title>
 </head>
 
 <body>
-    <div id="page">
-        <div class="pane">
-            <div>Hi, my name is Christian.<br>I'm a developer with design skills.</div>
-        </div>
-        <div class="pane">
-            <div>2</div>
-        </div>
-        <div class="pane">
-            <div>3</div>
-        </div>
-        <div class="pane">
-            <div>4</div>
-        </div>
-        <div class="pane">
-            <div>5</div>
-        </div>
-        <div class="pane">
-            <div>Looping to the next</div>
-        </div>
-        <div class="pane">
-            <div>Hi, my name is Christian.<br>I'm a developer with design skills.</div>
-        </div>
+  <div id="page">
+
+    <div class="pane">
+      <div>Hello friend #<span id="counter"></span>,
+        <br>my name is Christian.
+        <br>I'm a <span class="courier">&lt;developer/&gt;</span> with <span class="cursive">design</span> skills.
+      </div>
     </div>
 
-    <script src="script.js"type="text/javascript"></script>
+    <div class="pane">
+      <div>Gonna try some chat shit</div>
+      <form>
+        <input type="text" name="message" id="message" placeholder="Say something nice"/>
+        <input type="text" name="name" id="name" placeholder="Who are you"/>
+        <button onclick="sendChat()">Click</button>
+      </form>
+      <div id="chatbox"></div>
+    </div>
+
+    <div class="pane">
+      <div class="resetters">
+        <button onclick="resetChat()">reset chat</button>
+        <button onclick="resetCount()">reset count</button>
+        <button onclick="resetAll()">reset all</button>
+      </div>
+    </div>
+
+    <div class="pane">
+      <div>4</div>
+    </div>
+    <div class="pane">
+      <div>5</div>
+    </div>
+    <div class="pane">
+      <div>Looping to the next</div>
+    </div>
+    <div class="pane">
+      <div>Hello friend #<span id="counter"></span>,
+        <br>my name is Christian.
+        <br>I'm a <span class="courier">&lt;developer/&gt;</span> with <span class="cursive">design</span> skills.
+      </div>
+    </div>
+  </div>
+  <script src="script.js" type="text/javascript"></script>
 </body>
 
 </html>
