--- a/index.html
+++ b/index.html
@@ -11,32 +11,24 @@
 
 <body>
   <div id="page">
-
     <div class="pane">
       <div>Hello friend #<span id="counter"></span>,
         <br>my name is Christian.
         <br>I'm a <span class="courier">&lt;developer/&gt;</span> with <span class="cursive">design</span> skills.
       </div>
     </div>
-
     <div class="pane">
       <div>Gonna try some chat shit</div>
       <form>
-        <input type="text" name="message" id="message" placeholder="Say something nice"/>
-        <input type="text" name="name" id="name" placeholder="Who are you"/>
+        <input type="text" name="message" id="message" placeholder="Say something nice" />
+        <input type="text" name="name" id="name" placeholder="Who are you" />
         <button onclick="sendChat()">Click</button>
       </form>
       <div id="chatbox"></div>
     </div>
-
     <div class="pane">
-      <div class="resetters">
-        <button onclick="resetChat()">reset chat</button>
-        <button onclick="resetCount()">reset count</button>
-        <button onclick="resetAll()">reset all</button>
-      </div>
+      <div>3</div>
     </div>
-
     <div class="pane">
       <div>4</div>
     </div>
@@ -53,6 +45,12 @@
       </div>
     </div>
   </div>
+
+  <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+
+  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-database.js"></script>
   <script src="script.js" type="text/javascript"></script>
 </body>
 
