--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id="page">
     <div class="pane">
-      <div>Hello friend #<span id="counter"></span>,
+      <div>Hello friend #<span class="counter"></span>,
         <br>my name is Christian.
         <br>I'm a <span class="courier">&lt;developer/&gt;</span> with <span class="cursive">design</span> skills.
       </div>
@@ -39,7 +39,7 @@
       <div>Looping to the next</div>
     </div>
     <div class="pane">
-      <div>Hello friend #<span id="counter"></span>,
+      <div>Hello friend #<span class="counter"></span>,
         <br>my name is Christian.
         <br>I'm a <span class="courier">&lt;developer/&gt;</span> with <span class="cursive">design</span> skills.
       </div>
