--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
       </div>
     </div>
     <div class="pane">
-      <div>Gonna try some chat shit</div>
-      <form>
-        <input type="text" name="message" id="message" placeholder="Say something nice" />
-        <input type="text" name="name" id="name" placeholder="Who are you" />
-        <button onclick="sendChat()">Click</button>
-      </form>
-      <div id="chatbox"></div>
+      <div class="chatboxContainer">
+        <div>some chat shit</div>
+        <div id="chatbox"></div>
+        <form>
+          <input type="text" name="name" id="name" placeholder="who u be fam" />
+          <input type="text" name="message" id="message" placeholder="be nice ya" />
+          <button onclick="sendChat()">Click</button>
+        </form>
+      </div>
     </div>
     <div class="pane">
       <div>3</div>
@@ -45,9 +47,7 @@
       </div>
     </div>
   </div>
-
   <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
-
   <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-database.js"></script>
