--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 </head>
 
 <body>
-  <div id="page">
+  <div id="page" class="horizontal_scrolling">
     <div class="pane">
-      <div>Hello friend #<span class="counter"></span>,
+      <img src="images/me2.png" class="center" width="400">
+      <div class="blend">Hello friend #<span class="counter"></span>,
         <br>my name is Christian.
         <br>I'm a <span class="courier">&lt;developer/&gt;</span> with <span class="cursive">design</span> skills.
       </div>
     </div>
     <div class="pane">
       <div class="chatboxContainer">
-        <div>some chat shit</div>
+        <div class="blend">some chat shit</div>
         <div id="chatbox"></div>
         <form>
           <input type="text" name="name" id="name" placeholder="who u be fam" />
@@ -29,19 +30,8 @@
       </div>
     </div>
     <div class="pane">
-      <div>3</div>
-    </div>
-    <div class="pane">
-      <div>4</div>
-    </div>
-    <div class="pane">
-      <div>5</div>
-    </div>
-    <div class="pane">
-      <div>Looping to the next</div>
-    </div>
-    <div class="pane">
-      <div>Hello friend #<span class="counter"></span>,
+      <img src="images/me2.png" class="center" width="400">
+      <div style="z-index: 1;" class="blend">Hello friend #<span class="counter"></span>,
         <br>my name is Christian.
         <br>I'm a <span class="courier">&lt;developer/&gt;</span> with <span class="cursive">design</span> skills.
       </div>
@@ -51,6 +41,12 @@
   <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/6.1.0/firebase-database.js"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous">
+  </script>
+  <script src="https://aerolab.github.io/midnight.js/midnight.jquery.min.js"></script>
   <script src="script.js" type="text/javascript"></script>
 </body>
 
