changed projects layout

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         </div>
       </div>
     </div>
-
     <div class="pane long">
       <ul id="works">
         <li class="project">
@@ -45,39 +44,49 @@
             <div class="lineBoth">
               <span class="testNumber">01.</span>
               <span class="testTitle">Dullah Bills</span>
-              <span class="testDescription">Progressive Web Application<span class="testArrow">></span></span>
+              <span class="testDescription">Progressive Web Application<span class="testArrow">→</span></span>
             </div>
             <div class="line">
               <span class="testNumber">02.</span>
               <span class="testTitle">Quick Pint</span>
-              <span class="testDescription">Web Application<span class="testArrow">></span></span>
+              <span class="testDescription">Web Application<span class="testArrow">→</span></span>
             </div>
             <div class="line">
               <span class="testNumber">03.</span>
               <span class="testTitle">Ticket</span>
-              <span class="testDescription">Web Application<span class="testArrow">></span></span>
+              <span class="testDescription">Web Application<span class="testArrow">→</span></span>
             </div>
             <div class="line">
               <span class="testNumber">04.</span>
               <span class="testTitle">Retro Arcade</span>
-              <span class="testDescription">Static Web Game<span class="testArrow">></span></span>
+              <span class="testDescription">Static Web Game<span class="testArrow">→</span></span>
             </div>
             <div class="line">
               <span class="testNumber">05.</span>
               <span class="testTitle">LKC@NHM</span>
-              <span class="testDescription">Ambient Ad Design<span class="testArrow">></span></span>
+              <span class="testDescription">Ambient Ad Design<span class="testArrow">→</span></span>
             </div>
             <div class="line">
               <span class="testNumber">06.</span>
               <span class="testTitle">Loue Bicycles</span>
-              <span class="testDescription">Website Design<span class="testArrow">></span></span>
+              <span class="testDescription">Website Design<span class="testArrow">→</span></span>
             </div>
           </div>
         </li>
       </ul>
     </div>
     <div class="pane" style="flex: 0 0 1450px;">
-      <span class="aside">&nbsp;&nbsp;&nbsp;&nbsp;Some sh*t literally nobody asked for</span>
+      <span class="aside">&nbsp;&nbsp;&nbsp;&nbsp;Some sh*t about me</span>
+      <div class="aboutMe">
+        <p>Hey there, my name is Christian Reynoso.
+          My friends call me Chris and so should you, friend. ;)</p>
+        <p>I was born in Philippines, raised in Singapore and looking for opportunities to feel the world. I went to school for graphic design and found myself interested in developing as well, so here I am.</p>
+        <span id="typing"></span><span id="typeCursor"></span><br>
+        <span>you can contact me via <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=christianreynoso96@gmail.com" target="_blank">email</a> if you are looking to collaborate or just wanna say hi that’s cool too.</span>
+      </div>
+    </div>
+    <div class="pane" style="flex: 0 0 1450px;">
+      <span class="aside">&nbsp;&nbsp;&nbsp;&nbsp;More sh*t literally nobody asked for</span>
       <div class="chatboxContainer">
         <div id="chatbox"></div>
         <form>
