fixed scribble gif

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- HOME STUFF -->
       <div class="home">
         <span class="aside">&nbsp;&nbsp;&nbsp;&nbsp;Home</span>
-        <img src="images/p2pscribble.gif" class="center" width="400">
+        <img src="images/p2pscribble.gif" class="scribble" width="400">
         <div class="homeTextLeft">
           Hello friend no. <span class="counter"></span>
         </div>
@@ -99,7 +99,7 @@
     <div class="pane">
       <div class="home">
         <span class="aside">&nbsp;&nbsp;&nbsp;&nbsp;Home</span>
-        <img src="images/p2pscribble.gif" class="center" width="400">
+        <img src="images/p2pscribble.gif" class="scribble" width="400">
         <div class="homeTextLeft">
           Hello friend no. <span class="counter"></span>
         </div>
