added projects pages

--- a/index.html
+++ b/index.html
@@ -46,27 +46,28 @@
               <span class="testTitle">Dullah Bills</span>
               <span class="testDescription">Progressive Web Application<span class="testArrow">→</span></span>
             </div>
-            <div class="line" onClick="console.log('quick pint!!!')">
+            <div class="line" onClick="window.location.href='quickpint.html'">
               <span class="testNumber">02.</span>
               <span class="testTitle">Quick Pint</span>
               <span class="testDescription">Web Application<span class="testArrow">→</span></span>
             </div>
-            <div class="line" onClick="console.log('ticket!!!')">
+            <div class="line" onClick="window.location.href='ticket.html'">
               <span class="testNumber">03.</span>
               <span class="testTitle">Ticket</span>
               <span class="testDescription">Web Application<span class="testArrow">→</span></span>
             </div>
-            <div class="line" onClick="console.log('retroarcade!!!')">
+            <!-- <div class="line" onClick="window.location.href='https://reynosoturtle.github.io/game-project/'"> -->
+            <div class="line" onClick="window.location.href='retroarcade.html'">
               <span class="testNumber">04.</span>
               <span class="testTitle">Retro Arcade</span>
               <span class="testDescription">Static Web Game<span class="testArrow">→</span></span>
             </div>
-            <div class="line" onClick="console.log('lkc@nhm!!!')">
+            <div class="line" onClick="window.location.href='lkc.html'">
               <span class="testNumber">05.</span>
-              <span class="testTitle">LKC@NHM</span>
+              <span class="testTitle">LKCNHM@NUS</span>
               <span class="testDescription">Ambient Ad Design<span class="testArrow">→</span></span>
             </div>
-            <div class="line" onClick="console.log('loue!!!')">
+            <div class="line" onClick="window.location.href='loue.html'">
               <span class="testNumber">06.</span>
               <span class="testTitle">Loue Bicycles</span>
               <span class="testDescription">Website Design<span class="testArrow">→</span></span>
