--- a/quickpint.html
+++ b/quickpint.html
@@ -17,41 +17,44 @@
     <div class="pane">
       <div class="home">
         <span class="aside">&nbsp;&nbsp;&nbsp;&nbsp;Project</span>
-        <div class="title">Dullah<br>Bills</div>
+        <div class="title">Quick<br>Pint</div>
         <ul id="container">
           <li class="container-child">
             <ul>
               <li style="text-transform: uppercase; font-weight: 700; font-style: italic;">Technologies</li>
-              <li>Node.js</li>
-              <li>React.js</li>
+              <li>Ruby on Rails</li>
               <li>PostgreSQL</li>
-              <li>OCR API</li>
+              <li>Google Places API</li>
+              <li>Cloudinary API</li>
             </ul>
           </li>
           <li class="container-child">
             <ul>
               <li style="text-transform: uppercase; font-weight: 700; font-style: italic;">Collaborators</li>
-              <li><a href="https://andrewtan2903.github.io/Andrew-Tan-Porfolio/">Andrew</a></li>
-              <li><a href="https://helloimhd.github.io/">Herda</a></li>
-              <li><a href="https://shiowwj.github.io/">Wei Jun</a></li>
+              <li><a href="http://calvinyeap.com/">Calvin</a></li>
+              <li><a href="http://claudiachin.com">Claudia</a></li>
+              <li><a href="http://www.siangeeeo.org/">Siang Ee</a></li>
             </ul>
           </li>
           <li class="container-child">
             <ul>
               <li style="text-transform: uppercase; font-weight: 700; font-style: italic;">Links</li>
-              <li><a href="https://github.com/helloimhd/bills">GitHub</a></li>
+              <li><a href="https://quick-pint.herokuapp.com/">Heroku</a></li>
+              <li><a href="https://github.com/reynosoturtle/Project-3-Quick-Pint">GitHub</a></li>
             </ul>
           </li>
         </ul>
         <div class="details">
           <p class="header">About</p>
-          <p>There are many ways to split the bill. While most choose to go Dutch, there will always be some who end up at the losing end. Over time, this could cause unwanted frictions in groups as the numbers cumulate. While there is always the option of splitting it by the item but with taxes involved, it is just too much of a hassle. Dullah Bills gets the hassle out of the equation. </p>
-          <p class="header">Split bills with ease</p>
+          <p>Have you ever thought of going a quick drink (or what we like to call, a Quick Pint) after a long day of work? Last minute plans like that usually a few considerations to factor in. Do I have work the next day? If so, is it *<i>worth it</i>*?</p>
+          <p class="header">Still can't decide?</p>
           <p>
-            What sets Dullah Bills apart from the existing apps out there like Splitwise is the implementation of OCR technology. Although the technology goes way back, there is no perfect one out there. This is also another issue that surfaced after experimenting with it. Our simple solution is to have it give us the first layer of input, then give the user the chance to vet and rectify the inaccurarcate values, if necessary. </p>
-          <p class="header">Keep track of who is paying for what</p>
+            In Quick Pint, we give you options. But wait! Having more options just makes it even harder! We give you options that are automatically sorted from the nearest to the furthest. If that is not enough, there is also the option to sort by the price of a pint dictated by the owner.
+          </p>
+          <p class="header">I can't remember which bar I went to last time!</p>
           <p>
-            We enforce the payers and payees to be registered to the app. This is so that they are all able to see the bills they are involved with, regardless of being a payer or payee. This also opens up opportunities for us to implement cooler features such as payment systems like PayLah! and keeping track of the status of payments.</p>
+            Quick Pint gives you the ability to favourite bars which allows for easier access in the future. Now get drinking!
+          </p>
         </div>
       </div>
       <span class="aside" style="left: 1000px;">&nbsp;&nbsp;&nbsp;&nbsp;Photos - No images for now :(</span>
@@ -64,28 +67,27 @@
               <span class="testTitle">Back to home</span>
               <span class="testDescription"><span class="testArrow">→</span></span>
             </div>
-            <div class="line" onClick="window.location.href='/quickpint.html'">
+            <div class="line" onClick="window.location.href='/dullahbills.html'">
               <span class="testNumber">02.</span>
-              <span class="testTitle">Quick Pint</span>
-              <span class="testDescription">Web Application<span class="testArrow">→</span></span>
+              <span class="testTitle">Dullah Bills</span>
+              <span class="testDescription">Progressive Web Application<span class="testArrow">→</span></span>
             </div>
-            <div class="line" onClick="window.location.href='/ticket.html'">
+            <div class="line" onClick="window.location.href='/ticket'">
               <span class="testNumber">03.</span>
               <span class="testTitle">Ticket</span>
               <span class="testDescription">Web Application<span class="testArrow">→</span></span>
             </div>
-            <!-- <div class="line" onClick="window.location.href='https://reynosoturtle.github.io/game-project/'"> -->
             <div class="line" onClick="window.location.href='retroarcade.html'">
               <span class="testNumber">04.</span>
               <span class="testTitle">Retro Arcade</span>
               <span class="testDescription">Static Web Game<span class="testArrow">→</span></span>
             </div>
-            <div class="line" onClick="window.location.href='/lkc.html'">
+            <div class="line" onClick="window.location.href='/lkc'">
               <span class="testNumber">05.</span>
               <span class="testTitle">LKCNHM@NUS</span>
               <span class="testDescription">Ambient Ad Design<span class="testArrow">→</span></span>
             </div>
-            <div class="line" onClick="window.location.href='/loue.html'">
+            <div class="line" onClick="window.location.href='/loue'">
               <span class="testNumber">06.</span>
               <span class="testTitle">Loue Bicycles</span>
               <span class="testDescription">Website Design<span class="testArrow">→</span></span>
