--- a/retroarcade.html
+++ b/retroarcade.html
@@ -17,41 +17,39 @@
     <div class="pane">
       <div class="home">
         <span class="aside">&nbsp;&nbsp;&nbsp;&nbsp;Project</span>
-        <div class="title">Dullah<br>Bills</div>
+        <div class="title">Retro<br>Arcade</div>
         <ul id="container">
           <li class="container-child">
             <ul>
               <li style="text-transform: uppercase; font-weight: 700; font-style: italic;">Technologies</li>
-              <li>Node.js</li>
-              <li>React.js</li>
-              <li>PostgreSQL</li>
-              <li>OCR API</li>
-            </ul>
-          </li>
-          <li class="container-child">
-            <ul>
-              <li style="text-transform: uppercase; font-weight: 700; font-style: italic;">Collaborators</li>
-              <li><a href="https://andrewtan2903.github.io/Andrew-Tan-Porfolio/">Andrew</a></li>
-              <li><a href="https://helloimhd.github.io/">Herda</a></li>
-              <li><a href="https://shiowwj.github.io/">Wei Jun</a></li>
+              <li>Javascript</li>
+              <li>HTML</li>
+              <li>CSS</li>
             </ul>
           </li>
           <li class="container-child">
             <ul>
               <li style="text-transform: uppercase; font-weight: 700; font-style: italic;">Links</li>
-              <li><a href="https://github.com/helloimhd/bills">GitHub</a></li>
+              <li><a href="https://reynosoturtle.github.io/game-project/">Game</a></li>
+              <li><a href="https://github.com/reynosoturtle/game-project">GitHub</a></li>
             </ul>
           </li>
         </ul>
         <div class="details">
           <p class="header">About</p>
-          <p>There are many ways to split the bill. While most choose to go Dutch, there will always be some who end up at the losing end. Over time, this could cause unwanted frictions in groups as the numbers cumulate. While there is always the option of splitting it by the item but with taxes involved, it is just too much of a hassle. Dullah Bills gets the hassle out of the equation. </p>
-          <p class="header">Split bills with ease</p>
+          <p><span style="font-size: 0.5rem;text-decoration: line-through;">Ah, my very first project in GA. When the days were simpler and before stress took control over my life.</span> <br>In this project, we were tasked to create a browser based game with Javascript. This project was truly enjoyable because I was recreating two of my favourite minigames from Super Mario Party.</p>
+          <p class="header">Game 1 - Looking for Love</p>
           <p>
-            What sets Dullah Bills apart from the existing apps out there like Splitwise is the implementation of OCR technology. Although the technology goes way back, there is no perfect one out there. This is also another issue that surfaced after experimenting with it. Our simple solution is to have it give us the first layer of input, then give the user the chance to vet and rectify the inaccurarcate values, if necessary. </p>
-          <p class="header">Keep track of who is paying for what</p>
+            Look for the heart! Don't let the colour and other suits confuse you.<br>
+            Controls:<br>
+            Player 1: W (Up) A (Down) S (Left) D (Right)<br>
+            Player 2: <span style="font-family: 'Lora', serif;">↑</span> (Up) <span style="font-family: 'Lora', serif;">↓</span> (Down) ← (Left) → (Right)</p>
+          <p class="header">Game 2 - Absent Minded</p>
           <p>
-            We enforce the payers and payees to be registered to the app. This is so that they are all able to see the bills they are involved with, regardless of being a payer or payee. This also opens up opportunities for us to implement cooler features such as payment systems like PayLah! and keeping track of the status of payments.</p>
+            Figure out who isn't there!<br>
+            Controls:<br>
+            Player 1: W (Select) A (Left) D (Right)<br>
+            Player 2: ← (Left) → (Right) <span style="font-family: 'Lora', serif;">↑</span> (Select)</p>
         </div>
       </div>
       <span class="aside" style="left: 1000px;">&nbsp;&nbsp;&nbsp;&nbsp;Photos - No images for now :(</span>
@@ -64,21 +62,20 @@
               <span class="testTitle">Back to home</span>
               <span class="testDescription"><span class="testArrow">→</span></span>
             </div>
-            <div class="line" onClick="window.location.href='/quickpint.html'">
+            <div class="line" onClick="window.location.href='dullahbills.html'">
               <span class="testNumber">02.</span>
+              <span class="testTitle">Dullah Bills</span>
+              <span class="testDescription">Progressive Web Application<span class="testArrow">→</span></span>
+            </div>
+            <div class="line" onClick="window.location.href='/quickpint.html'">
+              <span class="testNumber">03.</span>
               <span class="testTitle">Quick Pint</span>
               <span class="testDescription">Web Application<span class="testArrow">→</span></span>
             </div>
             <div class="line" onClick="window.location.href='/ticket.html'">
-              <span class="testNumber">03.</span>
+              <span class="testNumber">04.</span>
               <span class="testTitle">Ticket</span>
               <span class="testDescription">Web Application<span class="testArrow">→</span></span>
-            </div>
-            <!-- <div class="line" onClick="window.location.href='https://reynosoturtle.github.io/game-project/'"> -->
-            <div class="line" onClick="window.location.href='retroarcade.html'">
-              <span class="testNumber">04.</span>
-              <span class="testTitle">Retro Arcade</span>
-              <span class="testDescription">Static Web Game<span class="testArrow">→</span></span>
             </div>
             <div class="line" onClick="window.location.href='/lkc.html'">
               <span class="testNumber">05.</span>
